--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
       # pre-start the simulator to prevent timeouts
       - run:
           name: Pre-start Simulator
-          command: xcrun instruments -w "iPhone 8 (13.1) [" || true
+          command: xcrun instruments -w "iPhone 11 Pro (13.6) [" || true
 
       - run:
           name: Run Tests
