Use AEPEdgeConsent name

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ on:
         default: 'yes'
 
       release_AEPConsent:
-        description: 'release AEPConsent to Cocoapods ("no" to skip)'
+        description: 'release AEPEdgeConsent to Cocoapods ("no" to skip)'
         required: true
         default: 'yes'
 
@@ -62,11 +62,11 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Publish Pods - AEPConsent
-      if: ${{ github.event.inputs.release_AEPConsent == 'yes' }}
+    - name: Publish Pods - AEPEdgeConsent
+      if: ${{ github.event.inputs.release_AEPEdgeConsent == 'yes' }}
       run: |
         set -eo pipefail
-        pod trunk push AEPConsent.podspec --allow-warnings --synchronous --swift-version=5.1
+        pod trunk push AEPEdgeConsent.podspec --allow-warnings --synchronous --swift-version=5.1
         pod repo update
       env:
         COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }
