--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ on:
         required: true
         default: 'yes'
 
-      release_AEPConsent:
+      release_AEPEdgeConsent:
         description: 'release AEPEdgeConsent to Cocoapods ("no" to skip)'
         required: true
         default: 'yes'
