--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,5 +69,4 @@ jobs:
         pod trunk push AEPEdgeConsent.podspec --allow-warnings --synchronous --swift-version=5.1
         pod repo update
       env:
-        COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }
-}
+        COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
