Updated build script to run swiftlint from cocopod and udpated codecov config

--- a/codecov.yml
+++ b/codecov.yml
@@ -16,6 +16,7 @@ coverage:
     - "./Tests/**/*"
     - "./Tests/.*"
     - "./TestApp/.*"
+    - "./build"
 
 parsers:
   gcov:
@@ -29,4 +30,3 @@ comment:
   layout: "header, diff"
   behavior: default
   require_changes: no
-
