--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
 
   build-and-test:
     macos:
-      xcode: 11.6.0 # Specify the Xcode version to use
+      xcode: 13.0.0 # Specify the Xcode version to use
 
     steps:
       - checkout
@@ -61,28 +61,40 @@ jobs:
 
       # pre-start the simulator to prevent timeouts
       - run:
-          name: Pre-start Simulator
+          name: Pre-start iOS Simulator
           command: xcrun instruments -w "iPhone 11 Pro (13.6) [" || true
 
       - run:
-          name: Run Tests
-          command: make test
+          name: Run AEPEdgeConsent iOS Tests
+          command: make test-ios
 
       # code coverage
       - run:
-          name: Upload Code Coverage Report
+          name: Download Codecov Uploader
           command: |
             curl -s https://codecov.io/bash > codecov;
             VERSION=$(grep 'VERSION=\"[0-9\.]*\"' codecov | cut -d'"' -f2);
-            SHAVERSION=$(shasum -v);
-            echo "Using CodeCov version '$VERSION'"
-            echo "Using shasum '$SHAVERSION'"
             for i in 1 256 512
             do
               shasum -a $i -c --ignore-missing <(curl -s "https://raw.githubusercontent.com/codecov/codecov-bash/${VERSION}/SHA${i}SUM") ||
-              shasum -a $i -c <(curl -s "https://raw.githubusercontent.com/codecov/codecov-bash/${VERSION}/SHA${i}SUM" | head -n 1)
+              shasum -a $i -c <(curl -s "https://raw.githubusercontent.com/codecov/codecov-bash/${VERSION}/SHA${i}SUM" | grep -w "codecov")
             done
-            bash ./codecov -v -X s3 -c -D "./build/out" -J "AEPEdgeConsent"
+
+      - run:
+          name: Upload Code Coverage Reports for AEPEdgeConsent iOS
+          command: bash ./codecov -v -X s3 -c -D "./build/out" -J "AEPEdgeConsent"
+
+      - run:
+          name: Pre-start tvOS Simulator
+          command: xcrun instruments -w "Apple TV (15.0) [" || true
+
+      - run:
+          name: Run AEPEdgeConsent tvOS Tests
+          command: make test-tvos
+
+      - run:
+          name: Upload Code Coverage Reports for AEPEdgeConsent tvOS
+          command: bash ./codecov -v -X s3 -c -D "./build/out" -J "AEPEdgeConsent tvOS"
 
       # verify XCFramework archive builds
       - run:
