--- a/AEPEdgeConsent.xcodeproj/xcshareddata/xcschemes/TestAppObjC.xcscheme
+++ b/AEPEdgeConsent.xcodeproj/xcshareddata/xcschemes/TestAppObjC.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1340"
+   LastUpgradeVersion = "1420"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2EDF6183287CC84D007DCFCC"
-               BuildableName = "TestAppSwifttvOS.app"
-               BlueprintName = "TestAppSwifttvOS"
+               BlueprintIdentifier = "B6F6622B2604B3C600BB6DD2"
+               BuildableName = "TestAppObjC.app"
+               BlueprintName = "TestAppObjC"
                ReferencedContainer = "container:AEPEdgeConsent.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,9 +44,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2EDF6183287CC84D007DCFCC"
-            BuildableName = "TestAppSwifttvOS.app"
-            BlueprintName = "TestAppSwifttvOS"
+            BlueprintIdentifier = "B6F6622B2604B3C600BB6DD2"
+            BuildableName = "TestAppObjC.app"
+            BlueprintName = "TestAppObjC"
             ReferencedContainer = "container:AEPEdgeConsent.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -61,9 +61,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2EDF6183287CC84D007DCFCC"
-            BuildableName = "TestAppSwifttvOS.app"
-            BlueprintName = "TestAppSwifttvOS"
+            BlueprintIdentifier = "B6F6622B2604B3C600BB6DD2"
+            BuildableName = "TestAppObjC.app"
+            BlueprintName = "TestAppObjC"
             ReferencedContainer = "container:AEPEdgeConsent.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
